[tool.poetry]
name = "rpaframework-litellm"
version = "0.1.2"
description = "LiteLLM library for RPA Framework"
authors = ["Sean Summers <seansummers@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"

repository = "https://github.com/seansummers/rpaframework-litellm"

keywords = ["robotframework", "rpa", "automation", "litellm", "llm", "ai"]
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Development Status :: 5 - Production/Stable",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Libraries",
	"Framework :: Robot Framework :: Library",
	"Framework :: Robot Framework",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

include = ["*.libspec"]

packages = [{ include = "RPA", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
litellm = ">=1.44.7"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^3.7.9"
pylint = "^2.4.4, <2.13"
pytest = "^7.2.0"
mock = "^5.0.0"
pytest-cov = "^4.0.0"
invoke = "^2.2.0"
robotframework-docgen = "^0.16.0"
toml = "^0.10.2"
colorama = "^0.4.5"
keyring = "^24.2.0"
PyYAML = ">=5.4.1,<7.0.0"
importlib-metadata = ">4.13.0"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
wrapt = ">=1.14"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report term-missing --cov-branch"
testpaths = ["tests"]
